--- a/index.html
+++ b/index.html
@@ -141,21 +141,21 @@
 <div class="title-wrap">
 <p class="font66">наши</p>
 <p class="font92">сервера</p>
-<p class="desc font24 akrobat">Общий онлайн: <span class="pig">474</span></p>
+<p class="desc font24 akrobat">Общий онлайн: <span class="pig">не известно</span></p>
 </div>
 <div class="servers-grid">
 <div>
 <i class="glass"></i>
 <p class="s-name"><span>Globus-rp1</span>Globus-rp1</p>
 <div class="s-online">
-<p>Онлайн<br><strong>205 из 1000</strong></p>
+<p>Онлайн<br><strong>16 из 20</strong></p>
 </div>
 <a class="s-copy s-copy1" data-clipboard-text="93.100.139.231:22094"><img src="tmp/assets/images/copy7aca.svg?847061233" alt=""> Скопировать ip адрес</a>
 </div>
 <div>
 <p class="s-name"><span>Globus-rp1</span>Globus-rp1</p>
 <div class="s-online">
-<p>Онлайн<br><strong>269 из 1000</strong></p>
+<p>Онлайн<br><strong>16 из 20</strong></p>
 </div>
 <a class="s-copy s-copy2" data-clipboard-text="93.100.139.231:22094"><img src="tmp/assets/images/copy7aca.svg?847061233" alt=""> Скопировать ip адрес</a>
 </div>
@@ -163,7 +163,7 @@
 <i class="dog-wrap"><span class="dog-show"></span><span class="dog-hide"></span></i>
 <div class="all-users">
 <p class="font24">всего зарегистрированных игроков</p>
-<p class="font48 pig">843 952</p>
+<p class="font48 pig">1 892</p>
 </div>
 </div>
 </div>
