--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
 <p><strong>Globus-rp1</strong></p>
 <p>Официальная страница</p>
 <a target="_blank" href="https://vk.com/globusrp1" class="yellow-but">Перейти</a>
-<p><small><span>41 386</span> уже с нами</small></p>
+<p><small><span>946</span> уже с нами</small></p>
 </div>
 <div>
 <p><strong>Globus-rp1</strong></p>
 <p>Свободное общение</p>
 <a target="_blank" href="https://vk.com/globusrp1" class="yellow-but">Перейти</a>
-<p><small><span>6 391</span> уже с нами</small></p>
+<p><small><span>946</span> уже с нами</small></p>
 </div>
 </div>
 <i class="social-mans">
